add: metal (gpu) support for llama_cpp services

--- a/cht-llama-cpp/docker/cpu/Dockerfile
+++ b/cht-llama-cpp/docker/cpu/Dockerfile
@@ -15,4 +15,5 @@ RUN wget -O ./ml/models/${MODEL_ID}.gguf ${MODEL_DOWNLOAD_URL}
 
 COPY . .
 ENV MODEL_ID=$MODEL_ID
+ENV DEVICE=cpu
 CMD python main.py
